fix list post title gap

--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -19,7 +19,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  gap: 0rem;
+  gap: 0.5rem;
 }
 
 .people {
@@ -29,7 +29,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 2rem;
+  gap: 0.5rem;
 }
 
 .list-item-people {
